<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTaskActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_before_24"
        app:title="@string/create_task" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/medium_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/medium_margin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/title_hint"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/description_hint"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/til_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/date_hint"
        app:layout_constraintEnd_toStartOf="@id/til_time"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        app:startIconDrawable="@drawable/ic_calendar_today_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:hint="@string/time_hint"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/til_date"
        app:layout_constraintTop_toTopOf="@id/til_date"
        app:startIconDrawable="@drawable/ic_clock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/cancel_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/btn_new_task"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/create_task"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start" />

</androidx.constraintlayout.widget.ConstraintLayout>